@@ -41,10 +41,13 @@ MAIN GOAL for 0.6.0:
 
    [ ]	STEP EXECUTIONS, REVERSE EXECUTION, SNAPSHOTTING, ...
 
-	Single-stepping:
-		Sets runstate to Paused after executing something.
+	[/] Single-stepping:
+		[ ]  Execute the step.
+		[X]  Increase the step count.
+		[X]  Set runstate to Paused after executing something.
 	
-	Continuous execution:
+	[ ] Continuous execution:
+		TODO.
 
 
 	Single-stepping should probably print the shortest possible part of the
@@ -291,6 +294,9 @@ MAIN GOAL for 0.6.0:
 
 	[ ]  Right now, entering a command such as "c" says "unknown command".
 	     It should say "ambigous command"!
+
+	[ ]  MayBeReexecutedWithoutArgs functionality for methods! Like dump,
+		and unassemble.
 
 	[/]  Tab completion for everything:
 
